# libdtree

./: .gitignore  CMakeLists.txt  README  array.c  array.h  bowl.c  bowl.h  data.c  hash.c  hash.h  main.c  utils.c  utils.h
examples/: hash.c  list.c  tree.c
include/dtree/: dtree.h  dyn_err.h  dyn_tree.h  eztree.h
lib/: dtree.c  dtree_utils.c  dyn_tree.c  dyn_utils.c  eztree.c  jsmn.c  jsmn.h
test/: main.c
